--- a/cypress/.gitignore
+++ b/cypress/.gitignore
@@ -1,4 +1,4 @@
 # Dependency directories
-.node_modules/
-.cypress/screenshots/
-.cypress/videos/
+node_modules/
+cypress/screenshots/
+cypress/videos/
